syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/field_mask.proto";
import "common.proto";
package ice.service.collateral;

option csharp_namespace = "Ice.Service.Collateral";


service CollateralEngine {
	 rpc CalculateHaircut(Asset) returns (HaircutResult);
}


enum AssetType {
	FX = 0;
	GOV = 1;
}

message Asset {
	AssetType AssetType = 1;
	string Name = 2;
	repeated ice.service.common.TimeSeriesDataPoint TimeSeriesDataPointCollection = 3;
	
}

message HaircutResult {
	Asset AssetInfo = 1;
	double LowerBoundPct = 2;
	double UpperBoundPct = 3;
	double ExpectedShortfall = 4;
	double ValueAtRisk = 5;
}